--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
@@ -4,59 +4,31 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
-      encoding: UTF-8
-      string: |-
-        <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
-               <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/
-              XMLSchema">
-                <Criterion>
-                  <Criteria><Criterion>
-                      <TextSearch>
-                          <QueryPredicate>("ottawa,yukon" or "OTTAWA,Y") and Stanford</QueryPredicate>
-                          <SearchType>ExactMatch</SearchType>
-                          <Columns>AggregateText</Columns>
-                          <MaximumRows>4</MaximumRows>
-                          </TextSearch>
-                    </Criterion><Criterion>
-                        <Filter>
-                          <Column>AuthorLastName</Column>
-                          <Operator>BeginsWith</Operator>
-                          <Value>OTTAWA</Value>
-                        </Filter>
-                      </Criterion><Criterion>
-                        <Filter>
-                          <Column>AuthorFirstName</Column>
-                          <Operator>BeginsWith</Operator>
-                          <Value>Y</Value>
-                        </Filter>
-                      </Criterion><Criterion>
-                            <Filter>
-                              <Column>DocumentCategory</Column>
-                              <Operator>In</Operator>
-                              <Values>
-                                <Value>Journal Document</Value>
-                                <Value>Conference Proceeding Document</Value>
-                              </Values>
-                            </Filter>
-                          </Criterion></Criteria>
-                </Criterion>
-                <Columns>
-                  <SortColumn>
-                    <Column>Rank</Column>
-                    <Direction>Descending</Direction>
-                  </SortColumn>
-                </Columns>
-               <MaximumRows>4</MaximumRows>
-              </query>
-              ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery><![CDATA[\n
+        \      <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/\n
+        \     XMLSchema\">\n        <Criterion>\n          <Criteria><Criterion>\n
+        \             <TextSearch>\n                  <QueryPredicate>(\"ottawa,yukon\"
+        or \"OTTAWA,Y\") and Stanford</QueryPredicate>\n                  <SearchType>ExactMatch</SearchType>\n
+        \                 <Columns>AggregateText</Columns>\n                  <MaximumRows>4</MaximumRows>\n
+        \                 </TextSearch>\n            </Criterion><Criterion>\n                <Filter>\n
+        \                 <Column>AuthorLastName</Column>\n                  <Operator>BeginsWith</Operator>\n
+        \                 <Value>OTTAWA</Value>\n                </Filter>\n              </Criterion><Criterion>\n
+        \               <Filter>\n                  <Column>AuthorFirstName</Column>\n
+        \                 <Operator>BeginsWith</Operator>\n                  <Value>Y</Value>\n
+        \               </Filter>\n              </Criterion><Criterion>\n                    <Filter>\n
+        \                     <Column>DocumentCategory</Column>\n                      <Operator>In</Operator>\n
+        \                     <Values>\n                        <Value>Journal Document</Value>\n
+        \                       <Value>Conference Proceeding Document</Value>\n                      </Values>\n
+        \                   </Filter>\n                  </Criterion></Criteria>\n
+        \       </Criterion>\n        <Columns>\n          <SortColumn>\n            <Column>Rank</Column>\n
+        \           <Direction>Descending</Direction>\n          </SortColumn>\n        </Columns>\n
+        \      <MaximumRows>4</MaximumRows>\n      </query>\n      ]]></xmlQuery>\n
+        \     </ScienceWireQueryXMLParameter>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Licenseid:
@@ -87,16 +59,16 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:24:08 GMT
+      - Mon, 07 Mar 2016 22:17:53 GMT
       Content-Length:
       - '278'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>129741</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:24:09 GMT
+  recorded_at: Mon, 07 Mar 2016 22:17:53 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/129741?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -104,10 +76,8 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Content-Type:
@@ -136,13 +106,13 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:24:12 GMT
+      - Mon, 07 Mar 2016 22:17:53 GMT
       Content-Length:
       - '148'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:24:13 GMT
+  recorded_at: Mon, 07 Mar 2016 22:17:54 GMT
 recorded_with: VCR 2.9.3
