--- a/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
+++ b/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
@@ -4,13 +4,11 @@ http_interactions:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
-      encoding: UTF-8
-      string: "&id=233333333333333&id=45555666666666"
+      encoding: US-ASCII
+      string: ! '&id=233333333333333&id=45555666666666'
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
   response:
@@ -19,32 +17,37 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 20:25:16 GMT
+      - Mon, 07 Mar 2016 22:19:20 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE697B669DFAC1_0452SID
+      - 73BE4EAD6DDFE681_0131SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE697B669DFAC1_0452SID; domain=.nih.gov; path=/; expires=Sat, 10
-        Dec 2016 20:25:16 GMT
+      - ncbi_sid=73BE4EAD6DDFE681_0131SID; domain=.nih.gov; path=/; expires=Tue, 07
+        Mar 2017 22:19:20 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
       - chunked
     body:
-      encoding: UTF-8
-      string: |
-        <?xml version="1.0"?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2015//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_150101.dtd">
+      encoding: US-ASCII
+      string: ! '<?xml version="1.0"?>
+
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January
+        2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
+
         <PubmedArticleSet>
 
+
         </PubmedArticleSet>
+
+'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:16 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:20 GMT
 recorded_with: VCR 2.9.3
