--- a/fixtures/vcr_cassettes/publications_api_sourcelookup_test_doi.yml
+++ b/fixtures/vcr_cassettes/publications_api_sourcelookup_test_doi.yml
@@ -4,33 +4,19 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
-      encoding: UTF-8
-      string: |-
-        <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery>      <![CDATA[
-              <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                  <Criterion>
-                      <Criteria>
-                          <Criterion>
-                              <Filter>
-                                  <Column>DOI</Column>
-                                  <Operator>Equals</Operator>
-                                  <Value>10.1016/j.mcn.2012.03.008</Value>
-                              </Filter>
-                          </Criterion>
-                      </Criteria>
-                  </Criterion>
-                  <MaximumRows>200</MaximumRows>
-              </query>
-              ]]>
-        </xmlQuery>
-              </ScienceWireQueryXMLParameter>
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>      <![CDATA[\n
+        \     <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n
+        \         <Criterion>\n              <Criteria>\n                  <Criterion>\n
+        \                     <Filter>\n                          <Column>DOI</Column>\n
+        \                         <Operator>Equals</Operator>\n                          <Value>10.1016/j.mcn.2012.03.008</Value>\n
+        \                     </Filter>\n                  </Criterion>\n              </Criteria>\n
+        \         </Criterion>\n          <MaximumRows>200</MaximumRows>\n      </query>\n
+        \     ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Licenseid:
@@ -61,16 +47,16 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:40 GMT
+      - Mon, 07 Mar 2016 22:19:17 GMT
       Content-Length:
       - '278'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>143234</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:40 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:17 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/143234?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -78,10 +64,8 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Content-Type:
@@ -110,12 +94,12 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:41 GMT
+      - Mon, 07 Mar 2016 22:19:17 GMT
       Content-Length:
       - '3708'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>60830932</PublicationItemID>\r\n    <Title>Protein
         kinase C alpha and integrin-linked kinase mediate the negative axon guidance
@@ -159,5 +143,5 @@ http_interactions:
         \   <CopyrightStateProvince>CA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:41 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:17 GMT
 recorded_with: VCR 2.9.3
