--- a/fixtures/vcr_cassettes/pubmed_harvester_spec_no_filtering_local_only.yml
+++ b/fixtures/vcr_cassettes/pubmed_harvester_spec_no_filtering_local_only.yml
@@ -4,36 +4,24 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
-      encoding: UTF-8
-      string: |-
-        <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery>&lt;query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-                      &lt;Criterion ConjunctionOperator="AND"&gt;
-                        &lt;Criteria&gt;
-                          &lt;Criterion&gt;
-                            &lt;Filter&gt;
-                              &lt;Column&gt;PMID&lt;/Column&gt;
-                              &lt;Operator&gt;In&lt;/Operator&gt;
-                              &lt;Values&gt;&lt;Value&gt;99999999&lt;/Value&gt;&lt;/Values&gt;
-                                    &lt;/Filter&gt;
-                                  &lt;/Criterion&gt;
-                                &lt;/Criteria&gt;
-                              &lt;/Criterion&gt;
-                              &lt;Columns&gt;
-                                &lt;SortColumn&gt;
-                                  &lt;Column&gt;Rank&lt;/Column&gt;
-                                  &lt;Direction&gt;Descending&lt;/Direction&gt;
-                                &lt;/SortColumn&gt;
-                              &lt;/Columns&gt;
-                              &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;
-                            &lt;/query&gt;</xmlQuery>
-              </ScienceWireQueryXMLParameter>
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>&lt;query
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"&gt;\n
+        \             &lt;Criterion ConjunctionOperator=\"AND\"&gt;\n                &lt;Criteria&gt;\n
+        \                 &lt;Criterion&gt;\n                    &lt;Filter&gt;\n
+        \                     &lt;Column&gt;PMID&lt;/Column&gt;\n                      &lt;Operator&gt;In&lt;/Operator&gt;\n
+        \                     &lt;Values&gt;&lt;Value&gt;99999999&lt;/Value&gt;&lt;/Values&gt;\n
+        \                           &lt;/Filter&gt;\n                          &lt;/Criterion&gt;\n
+        \                       &lt;/Criteria&gt;\n                      &lt;/Criterion&gt;\n
+        \                     &lt;Columns&gt;\n                        &lt;SortColumn&gt;\n
+        \                         &lt;Column&gt;Rank&lt;/Column&gt;\n                          &lt;Direction&gt;Descending&lt;/Direction&gt;\n
+        \                       &lt;/SortColumn&gt;\n                      &lt;/Columns&gt;\n
+        \                     &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;\n                    &lt;/query&gt;</xmlQuery>\n
+        \     </ScienceWireQueryXMLParameter>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Licenseid:
@@ -64,16 +52,16 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:10 GMT
+      - Mon, 07 Mar 2016 22:19:24 GMT
       Content-Length:
       - '278'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>143802</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:10 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:24 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/143802?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -81,10 +69,8 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Content-Type:
@@ -113,26 +99,24 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:10 GMT
+      - Mon, 07 Mar 2016 22:19:24 GMT
       Content-Length:
       - '148'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:10 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:24 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
-      encoding: UTF-8
-      string: "&id=99999999"
+      encoding: US-ASCII
+      string: ! '&id=99999999'
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
   response:
@@ -141,31 +125,36 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 20:25:11 GMT
+      - Mon, 07 Mar 2016 22:19:24 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE7B14669DFA71_0399SID
+      - 73BF0AC56DDFE6C1_0756SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE7B14669DFA71_0399SID; domain=.nih.gov; path=/; expires=Sat, 10
-        Dec 2016 20:25:11 GMT
+      - ncbi_sid=73BF0AC56DDFE6C1_0756SID; domain=.nih.gov; path=/; expires=Tue, 07
+        Mar 2017 22:19:24 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
       - chunked
     body:
-      encoding: UTF-8
-      string: |
-        <?xml version="1.0"?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2015//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_150101.dtd">
+      encoding: US-ASCII
+      string: ! '<?xml version="1.0"?>
+
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January
+        2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
+
         <PubmedArticleSet>
+
         </PubmedArticleSet>
+
+'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:11 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:24 GMT
 recorded_with: VCR 2.9.3
