--- a/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
@@ -4,40 +4,20 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
-      encoding: UTF-8
-      string: |-
-        <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
-              <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                <Criterion ConjunctionOperator="AND">
-                  <Criteria>
-                    <Criterion>
-                      <Filter>
-                        <Column>WoSItemID</Column>
-                        <Operator>In</Operator>
-                        <Values>
-        <Value>000318550800072</Value>
-        <Value>000317872800004</Value>
-        <Value>000317717300006</Value>
-        </Values>
-                        </Filter>
-                      </Criterion>
-                    </Criteria>
-                  </Criterion><Columns>
-                    <SortColumn>
-                      <Column>PublicationItemID</Column>
-                      <Direction>Ascending</Direction>
-                    </SortColumn>
-                  </Columns>
-                </query>
-            ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery><![CDATA[\n
+        \     <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n
+        \       <Criterion ConjunctionOperator=\"AND\">\n          <Criteria>\n            <Criterion>\n
+        \             <Filter>\n                <Column>WoSItemID</Column>\n                <Operator>In</Operator>\n
+        \               <Values>\n<Value>000318550800072</Value>\n<Value>000317872800004</Value>\n<Value>000317717300006</Value>\n</Values>\n
+        \               </Filter>\n              </Criterion>\n            </Criteria>\n
+        \         </Criterion><Columns>\n            <SortColumn>\n              <Column>PublicationItemID</Column>\n
+        \             <Direction>Ascending</Direction>\n            </SortColumn>\n
+        \         </Columns>\n        </query>\n    ]]></xmlQuery>\n      </ScienceWireQueryXMLParameter>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Licenseid:
@@ -68,16 +48,16 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:04 GMT
+      - Mon, 07 Mar 2016 22:17:54 GMT
       Content-Length:
       - '277'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>81941</queryID>\r\n
         \ <queryResultRows>3</queryResultRows>\r\n  <totalRows>3</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:04 GMT
+  recorded_at: Mon, 07 Mar 2016 22:17:54 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -85,10 +65,8 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Content-Type:
@@ -117,12 +95,12 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:05 GMT
+      - Mon, 07 Mar 2016 22:17:54 GMT
       Content-Length:
       - '9644'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>62851007</PublicationItemID>\r\n    <Title>Persistent
         Topology and Metastable State in Conformational Dynamics</Title>\r\n    <Abstract>The
@@ -149,7 +127,7 @@ http_interactions:
         \   <AuthorCount>4</AuthorCount>\r\n    <KeywordList>DENSITY|KINETICS|MODELS|MOLECULAR-DYNAMICS|PROTEINS</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>31</NumberOfReferences>\r\n
-        \   <TimesCited>2</TimesCited>\r\n    <TimesNotSelfCited>2</TimesNotSelfCited>\r\n
+        \   <TimesCited>3</TimesCited>\r\n    <TimesNotSelfCited>3</TimesNotSelfCited>\r\n
         \   <PMID>23565139</PMID>\r\n    <WoSItemID>000317717300006</WoSItemID>\r\n
         \   <PublicationSourceTitle>PLOS ONE</PublicationSourceTitle>\r\n    <Volume>8</Volume>\r\n
         \   <Issue>4</Issue>\r\n    <Pagination />\r\n    <PublicationDate>2013-04-02T00:00:00</PublicationDate>\r\n
@@ -163,7 +141,7 @@ http_interactions:
         LIBRARY SCIENCE</CopyrightPublisher>\r\n    <CopyrightCity>SAN FRANCISCO</CopyrightCity>\r\n
         \   <ArticleNumber>e58699</ArticleNumber>\r\n    <PublicationImpactFactorList>3.534,2013,ExactPublicationYear|3.534,2013,MostRecentYear</PublicationImpactFactorList>\r\n
         \   <PublicationCategoryRankingList>8/55;MULTIDISCIPLINARY SCIENCES;2013;SC;ExactPublicationYear|8/55;MULTIDISCIPLINARY
-        SCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,0,2|2,0,2|3,0,2|4,0,2</AuthorCitationCountList>\r\n
+        SCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,0,3|2,0,3|3,0,3|4,0,3</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>CA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>62856137</PublicationItemID>\r\n    <Title>Emergence
@@ -180,7 +158,7 @@ http_interactions:
         \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList>TRAJECTORIES|TRANSITION|KINETICS</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>20</NumberOfReferences>\r\n
-        \   <TimesCited>15</TimesCited>\r\n    <TimesNotSelfCited>8</TimesNotSelfCited>\r\n
+        \   <TimesCited>16</TimesCited>\r\n    <TimesNotSelfCited>9</TimesNotSelfCited>\r\n
         \   <PMID>23540906</PMID>\r\n    <WoSItemID>000317872800004</WoSItemID>\r\n
         \   <PublicationSourceTitle>JOURNAL OF THE AMERICAN CHEMICAL SOCIETY</PublicationSourceTitle>\r\n
         \   <Volume>135</Volume>\r\n    <Issue>15</Issue>\r\n    <Pagination>5501-5504</Pagination>\r\n
@@ -195,7 +173,7 @@ http_interactions:
         \   <PublicationImpactFactorList>11.444,2013,ExactPublicationYear|11.444,2013,MostRecentYear</PublicationImpactFactorList>\r\n
         \   <PublicationCategoryRankingList>10/148;CHEMISTRY, MULTIDISCIPLINARY;2013;SC;ExactPublicationYear|10/148;CHEMISTRY,
         MULTIDISCIPLINARY;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
-        \   <AuthorCitationCountList>1,5,10|2,3,12|3,5,10</AuthorCitationCountList>\r\n
+        \   <AuthorCitationCountList>1,5,11|2,3,13|3,5,11</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>DC</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>62922945</PublicationItemID>\r\n    <Title>Functional
@@ -235,5 +213,5 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:05 GMT
+  recorded_at: Mon, 07 Mar 2016 22:17:55 GMT
 recorded_with: VCR 2.9.3
