--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_list_of_4.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_list_of_4.yml
@@ -4,59 +4,31 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
-      encoding: UTF-8
-      string: |-
-        <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
-               <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/
-              XMLSchema">
-                <Criterion>
-                  <Criteria><Criterion>
-                      <TextSearch>
-                          <QueryPredicate>("smith,james" or "SMITH,J") and Stanford</QueryPredicate>
-                          <SearchType>ExactMatch</SearchType>
-                          <Columns>AggregateText</Columns>
-                          <MaximumRows>200</MaximumRows>
-                          </TextSearch>
-                    </Criterion><Criterion>
-                        <Filter>
-                          <Column>AuthorLastName</Column>
-                          <Operator>BeginsWith</Operator>
-                          <Value>SMITH</Value>
-                        </Filter>
-                      </Criterion><Criterion>
-                        <Filter>
-                          <Column>AuthorFirstName</Column>
-                          <Operator>BeginsWith</Operator>
-                          <Value>J</Value>
-                        </Filter>
-                      </Criterion><Criterion>
-                            <Filter>
-                              <Column>DocumentCategory</Column>
-                              <Operator>In</Operator>
-                              <Values>
-                                <Value>Journal Document</Value>
-                                <Value>Conference Proceeding Document</Value>
-                              </Values>
-                            </Filter>
-                          </Criterion></Criteria>
-                </Criterion>
-                <Columns>
-                  <SortColumn>
-                    <Column>Rank</Column>
-                    <Direction>Descending</Direction>
-                  </SortColumn>
-                </Columns>
-               <MaximumRows>200</MaximumRows>
-              </query>
-              ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery><![CDATA[\n
+        \      <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/\n
+        \     XMLSchema\">\n        <Criterion>\n          <Criteria><Criterion>\n
+        \             <TextSearch>\n                  <QueryPredicate>(\"smith,james\"
+        or \"SMITH,J\") and Stanford</QueryPredicate>\n                  <SearchType>ExactMatch</SearchType>\n
+        \                 <Columns>AggregateText</Columns>\n                  <MaximumRows>200</MaximumRows>\n
+        \                 </TextSearch>\n            </Criterion><Criterion>\n                <Filter>\n
+        \                 <Column>AuthorLastName</Column>\n                  <Operator>BeginsWith</Operator>\n
+        \                 <Value>SMITH</Value>\n                </Filter>\n              </Criterion><Criterion>\n
+        \               <Filter>\n                  <Column>AuthorFirstName</Column>\n
+        \                 <Operator>BeginsWith</Operator>\n                  <Value>J</Value>\n
+        \               </Filter>\n              </Criterion><Criterion>\n                    <Filter>\n
+        \                     <Column>DocumentCategory</Column>\n                      <Operator>In</Operator>\n
+        \                     <Values>\n                        <Value>Journal Document</Value>\n
+        \                       <Value>Conference Proceeding Document</Value>\n                      </Values>\n
+        \                   </Filter>\n                  </Criterion></Criteria>\n
+        \       </Criterion>\n        <Columns>\n          <SortColumn>\n            <Column>Rank</Column>\n
+        \           <Direction>Descending</Direction>\n          </SortColumn>\n        </Columns>\n
+        \      <MaximumRows>200</MaximumRows>\n      </query>\n      ]]></xmlQuery>\n
+        \     </ScienceWireQueryXMLParameter>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Licenseid:
@@ -87,16 +59,16 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:24:13 GMT
+      - Mon, 07 Mar 2016 22:17:52 GMT
       Content-Length:
       - '280'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>129740</queryID>\r\n
         \ <queryResultRows>15</queryResultRows>\r\n  <totalRows>15</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:24:13 GMT
+  recorded_at: Mon, 07 Mar 2016 22:17:53 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/129740?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -104,10 +76,8 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Content-Type:
@@ -136,12 +106,12 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:24:15 GMT
+      - Mon, 07 Mar 2016 22:17:53 GMT
       Content-Length:
       - '35068'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>73471033</PublicationItemID>\r\n    <Title>What About
         This: Collected Poems of Frank Stanford</Title>\r\n    <Abstract />\r\n    <AuthorList>Smith,Jordan,</AuthorList>\r\n
@@ -403,7 +373,7 @@ http_interactions:
         \   <AuthorCount>1</AuthorCount>\r\n    <KeywordList>ALGORITHM</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>25</NumberOfReferences>\r\n
-        \   <TimesCited>167</TimesCited>\r\n    <TimesNotSelfCited>160</TimesNotSelfCited>\r\n
+        \   <TimesCited>169</TimesCited>\r\n    <TimesNotSelfCited>162</TimesNotSelfCited>\r\n
         \   <PMID xsi:nil=\"true\" />\r\n    <WoSItemID>A1992KH76800010</WoSItemID>\r\n
         \   <PublicationSourceTitle>COMPUTER MUSIC JOURNAL</PublicationSourceTitle>\r\n
         \   <Volume>16</Volume>\r\n    <Issue>4</Issue>\r\n    <Pagination>74-98</Pagination>\r\n
@@ -417,7 +387,7 @@ http_interactions:
         \   <CopyrightCity>CAMBRIDGE</CopyrightCity>\r\n    <PublicationImpactFactorList>0.548,1994,ClosestToPublicationYear|0.41,2013,MostRecentYear</PublicationImpactFactorList>\r\n
         \   <PublicationCategoryRankingList>16/41;COMPUTER SCIENCE, INTERDISCIPLINARY
         APPLICATIONS;1994;SC;ClosestToPublicationYear|99/102;COMPUTER SCIENCE, INTERDISCIPLINARY
-        APPLICATIONS;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,7,160</AuthorCitationCountList>\r\n
+        APPLICATIONS;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,7,162</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>MA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>23488997</PublicationItemID>\r\n    <Title>LONG-TERM
@@ -536,5 +506,5 @@ http_interactions:
         \   <AuthorCitationCountList>1,0,0|2,0,0</AuthorCitationCountList>\r\n    <CopyrightStateProvince>TX</CopyrightStateProvince>\r\n
         \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:24:15 GMT
+  recorded_at: Mon, 07 Mar 2016 22:17:53 GMT
 recorded_with: VCR 2.9.3
