--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
@@ -4,30 +4,18 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
     body:
-      encoding: UTF-8
-      string: |-
-        <?xml version='1.0'?>
-              <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
-                <Authors>
-                  <Author>
-                    <LastName>edler</LastName>
-                    <FirstName>alice</FirstName>
-                    <MiddleName></MiddleName>
-                    <City>Stanford</City>
-                    <State>CA</State>
-                    <Country>USA</Country>
-                    <Version>1</Version>
-                 </Author>
-              </Authors>
-              <DocumentCategory>Journal Document</DocumentCategory>
-              <Emails>
-                          <string>alice.edler@stanford.edu</string>
-                        </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>
+      encoding: US-ASCII
+      string: ! "<?xml version='1.0'?>\n      <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
+        xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n        <Authors>\n          <Author>\n
+        \           <LastName>edler</LastName>\n            <FirstName>alice</FirstName>\n
+        \           <MiddleName></MiddleName>\n            <City>Stanford</City>\n
+        \           <State>CA</State>\n            <Country>USA</Country>\n            <Version>1</Version>\n
+        \        </Author>\n      </Authors>\n      <DocumentCategory>Journal Document</DocumentCategory>\n
+        \     <Emails>\n                  <string>alice.edler@stanford.edu</string>\n
+        \               </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Licenseid:
@@ -58,51 +46,39 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:03 GMT
+      - Mon, 07 Mar 2016 22:18:19 GMT
       Content-Length:
-      - '872'
+      - '876'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
         \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>29352378</PublicationItemID>\r\n
         \   <MatchScore>1.2708333730697632</MatchScore>\r\n  </ItemMatchResult>\r\n
         \ <ItemMatchResult>\r\n    <MatchRank>2</MatchRank>\r\n    <PublicationItemID>29187981</PublicationItemID>\r\n
-        \   <MatchScore>0.991500735282898</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \   <MatchScore>0.99195355176925659</MatchScore>\r\n  </ItemMatchResult>\r\n
         \ <ItemMatchResult>\r\n    <MatchRank>3</MatchRank>\r\n    <PublicationItemID>46795732</PublicationItemID>\r\n
-        \   <MatchScore>0.51869171857833862</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \   <MatchScore>0.51931589841842651</MatchScore>\r\n  </ItemMatchResult>\r\n
         \ <ItemMatchResult>\r\n    <MatchRank>4</MatchRank>\r\n    <PublicationItemID>47593787</PublicationItemID>\r\n
-        \   <MatchScore>0.497712105512619</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+        \   <MatchScore>0.49826550483703613</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:03 GMT
+  recorded_at: Mon, 07 Mar 2016 22:18:20 GMT
 - request:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
     body:
-      encoding: UTF-8
-      string: |-
-        <?xml version='1.0'?>
-              <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
-                <Authors>
-                  <Author>
-                    <LastName>edler</LastName>
-                    <FirstName>alice</FirstName>
-                    <MiddleName></MiddleName>
-                    <City>Stanford</City>
-                    <State>CA</State>
-                    <Country>USA</Country>
-                    <Version>1</Version>
-                 </Author>
-              </Authors>
-              <DocumentCategory>Conference Proceeding Document</DocumentCategory>
-              <Emails>
-                          <string>alice.edler@stanford.edu</string>
-                        </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>
+      encoding: US-ASCII
+      string: ! "<?xml version='1.0'?>\n      <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
+        xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n        <Authors>\n          <Author>\n
+        \           <LastName>edler</LastName>\n            <FirstName>alice</FirstName>\n
+        \           <MiddleName></MiddleName>\n            <City>Stanford</City>\n
+        \           <State>CA</State>\n            <Country>USA</Country>\n            <Version>1</Version>\n
+        \        </Author>\n      </Authors>\n      <DocumentCategory>Conference Proceeding
+        Document</DocumentCategory>\n      <Emails>\n                  <string>alice.edler@stanford.edu</string>\n
+        \               </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Licenseid:
@@ -133,15 +109,15 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:25:04 GMT
+      - Mon, 07 Mar 2016 22:18:20 GMT
       Content-Length:
       - '349'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
         \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>10389828</PublicationItemID>\r\n
-        \   <MatchScore>0.34899818897247314</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+        \   <MatchScore>0.34979051351547241</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:25:04 GMT
+  recorded_at: Mon, 07 Mar 2016 22:18:20 GMT
 recorded_with: VCR 2.9.3
