--- a/fixtures/vcr_cassettes/sciencewire_harvester_update_pubmed_with_sw_data.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_update_pubmed_with_sw_data.yml
@@ -7,10 +7,8 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
       Content-Type:
@@ -39,12 +37,12 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 10 Dec 2015 20:26:52 GMT
+      - Mon, 07 Mar 2016 22:19:39 GMT
       Content-Length:
       - '2075'
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>42711845</PublicationItemID>\r\n    <Title>Frostbite:
         an orthopedic perspective.</Title>\r\n    <Abstract>Frostbite injury to the
@@ -70,18 +68,16 @@ http_interactions:
         />\r\n    <NewPublicationItemID>42711845</NewPublicationItemID>\r\n    <IsObsolete>false</IsObsolete>\r\n
         \   <CopyrightPublisher />\r\n    <CopyrightCity />\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:26:52 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:39 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
-      encoding: UTF-8
-      string: "&id=10048354"
+      encoding: US-ASCII
+      string: ! '&id=10048354'
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
   response:
@@ -90,170 +86,104 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 20:26:52 GMT
+      - Mon, 07 Mar 2016 22:19:40 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DD53C4669E00C1_0471SID
+      - 73BE7D686DDFE7C1_0779SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DD53C4669E00C1_0471SID; domain=.nih.gov; path=/; expires=Sat, 10
-        Dec 2016 20:26:52 GMT
+      - ncbi_sid=73BE7D686DDFE7C1_0779SID; domain=.nih.gov; path=/; expires=Tue, 07
+        Mar 2017 22:19:40 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
       - chunked
     body:
-      encoding: UTF-8
-      string: |
-        <?xml version="1.0"?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2015//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_150101.dtd">
-        <PubmedArticleSet>
-        <PubmedArticle>
-            <MedlineCitation Owner="NLM" Status="MEDLINE">
-                <PMID Version="1">10048354</PMID>
-                <DateCreated>
-                    <Year>1999</Year>
-                    <Month>04</Month>
-                    <Day>22</Day>
-                </DateCreated>
-                <DateCompleted>
-                    <Year>1999</Year>
-                    <Month>04</Month>
-                    <Day>22</Day>
-                </DateCompleted>
-                <DateRevised>
-                    <Year>2010</Year>
-                    <Month>01</Month>
-                    <Day>05</Day>
-                </DateRevised>
-                <Article PubModel="Print">
-                    <Journal>
-                        <ISSN IssnType="Print">1078-4519</ISSN>
-                        <JournalIssue CitedMedium="Print">
-                            <Volume>28</Volume>
-                            <Issue>1</Issue>
-                            <PubDate>
-                                <Year>1999</Year>
-                                <Month>Jan</Month>
-                            </PubDate>
-                        </JournalIssue>
-                        <Title>American journal of orthopedics (Belle Mead, N.J.)</Title>
-                        <ISOAbbreviation>Am J. Orthop.</ISOAbbreviation>
-                    </Journal>
-                    <ArticleTitle>Frostbite: an orthopedic perspective.</ArticleTitle>
-                    <Pagination>
-                        <MedlinePgn>21-6</MedlinePgn>
-                    </Pagination>
-                    <Abstract>
-                        <AbstractText>Frostbite injury to the extremities has the potential for disastrous effects. This review provides information valuable to the orthopedic surgeon to aid in the evaluation and treatment of frostbite. The pathophysiology and predisposing factors that provide a basic understanding of the nature of frostbite are discussed. Accepted and experimental imaging studies and treatment options are also reviewed. An effort is made to give the orthopedic perspective on each issue, providing a valuable resource for all orthopedic surgeons involved in the care of the patient with frostbite.</AbstractText>
-                    </Abstract>
-                    <AuthorList CompleteYN="Y">
-                        <Author ValidYN="Y">
-                            <LastName>McAdams</LastName>
-                            <ForeName>T R</ForeName>
-                            <Initials>TR</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Orthopaedics and Rehabilitation, University of New Mexico, Albuquerque, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Swenson</LastName>
-                            <ForeName>D R</ForeName>
-                            <Initials>DR</Initials>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Miller</LastName>
-                            <ForeName>R A</ForeName>
-                            <Initials>RA</Initials>
-                        </Author>
-                    </AuthorList>
-                    <Language>eng</Language>
-                    <PublicationTypeList>
-                        <PublicationType UI="D002363">Case Reports</PublicationType>
-                        <PublicationType UI="D016428">Journal Article</PublicationType>
-                        <PublicationType UI="D016454">Review</PublicationType>
-                    </PublicationTypeList>
-                </Article>
-                <MedlineJournalInfo>
-                    <Country>UNITED STATES</Country>
-                    <MedlineTA>Am J Orthop (Belle Mead NJ)</MedlineTA>
-                    <NlmUniqueID>9502918</NlmUniqueID>
-                    <ISSNLinking>1078-4519</ISSNLinking>
-                </MedlineJournalInfo>
-                <CitationSubset>IM</CitationSubset>
-                <MeshHeadingList>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D003131">Combined Modality Therapy</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D005260">Female</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D005627">Frostbite</DescriptorName>
-                        <QualifierName MajorTopicYN="Y" UI="Q000175">diagnosis</QualifierName>
-                        <QualifierName MajorTopicYN="N" UI="Q000188">drug therapy</QualifierName>
-                        <QualifierName MajorTopicYN="N" UI="Q000503">physiopathology</QualifierName>
-                        <QualifierName MajorTopicYN="Y" UI="Q000601">surgery</QualifierName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D006801">Humans</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D015601">Injury Severity Score</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D008297">Male</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D008875">Middle Aged</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="Y" UI="D019637">Orthopedic Procedures</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D011379">Prognosis</DescriptorName>
-                    </MeshHeading>
-                </MeshHeadingList>
-                <NumberOfReferences>44</NumberOfReferences>
-            </MedlineCitation>
-            <PubmedData>
-                <History>
-                    <PubMedPubDate PubStatus="pubmed">
-                        <Year>1999</Year>
-                        <Month>2</Month>
-                        <Day>27</Day>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="medline">
-                        <Year>1999</Year>
-                        <Month>2</Month>
-                        <Day>27</Day>
-                        <Hour>0</Hour>
-                        <Minute>1</Minute>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="entrez">
-                        <Year>1999</Year>
-                        <Month>2</Month>
-                        <Day>27</Day>
-                        <Hour>0</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                </History>
-                <PublicationStatus>ppublish</PublicationStatus>
-                <ArticleIdList>
-                    <ArticleId IdType="pubmed">10048354</ArticleId>
-                </ArticleIdList>
-            </PubmedData>
-        </PubmedArticle>
-
-        </PubmedArticleSet>
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n<!DOCTYPE PubmedArticleSet PUBLIC \"-//NLM//DTD
+        PubMedArticle, 1st January 2016//EN\" \"http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd\">\n<PubmedArticleSet>\n<PubmedArticle>\n
+        \   <MedlineCitation Owner=\"NLM\" Status=\"MEDLINE\">\n        <PMID Version=\"1\">10048354</PMID>\n
+        \       <DateCreated>\n            <Year>1999</Year>\n            <Month>04</Month>\n
+        \           <Day>22</Day>\n        </DateCreated>\n        <DateCompleted>\n
+        \           <Year>1999</Year>\n            <Month>04</Month>\n            <Day>22</Day>\n
+        \       </DateCompleted>\n        <DateRevised>\n            <Year>2010</Year>\n
+        \           <Month>01</Month>\n            <Day>05</Day>\n        </DateRevised>\n
+        \       <Article PubModel=\"Print\">\n            <Journal>\n                <ISSN
+        IssnType=\"Print\">1078-4519</ISSN>\n                <JournalIssue CitedMedium=\"Print\">\n
+        \                   <Volume>28</Volume>\n                    <Issue>1</Issue>\n
+        \                   <PubDate>\n                        <Year>1999</Year>\n
+        \                       <Month>Jan</Month>\n                    </PubDate>\n
+        \               </JournalIssue>\n                <Title>American journal of
+        orthopedics (Belle Mead, N.J.)</Title>\n                <ISOAbbreviation>Am
+        J. Orthop.</ISOAbbreviation>\n            </Journal>\n            <ArticleTitle>Frostbite:
+        an orthopedic perspective.</ArticleTitle>\n            <Pagination>\n                <MedlinePgn>21-6</MedlinePgn>\n
+        \           </Pagination>\n            <Abstract>\n                <AbstractText>Frostbite
+        injury to the extremities has the potential for disastrous effects. This review
+        provides information valuable to the orthopedic surgeon to aid in the evaluation
+        and treatment of frostbite. The pathophysiology and predisposing factors that
+        provide a basic understanding of the nature of frostbite are discussed. Accepted
+        and experimental imaging studies and treatment options are also reviewed.
+        An effort is made to give the orthopedic perspective on each issue, providing
+        a valuable resource for all orthopedic surgeons involved in the care of the
+        patient with frostbite.</AbstractText>\n            </Abstract>\n            <AuthorList
+        CompleteYN=\"Y\">\n                <Author ValidYN=\"Y\">\n                    <LastName>McAdams</LastName>\n
+        \                   <ForeName>T R</ForeName>\n                    <Initials>TR</Initials>\n
+        \                   <AffiliationInfo>\n                        <Affiliation>Department
+        of Orthopaedics and Rehabilitation, University of New Mexico, Albuquerque,
+        USA.</Affiliation>\n                    </AffiliationInfo>\n                </Author>\n
+        \               <Author ValidYN=\"Y\">\n                    <LastName>Swenson</LastName>\n
+        \                   <ForeName>D R</ForeName>\n                    <Initials>DR</Initials>\n
+        \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>Miller</LastName>\n
+        \                   <ForeName>R A</ForeName>\n                    <Initials>RA</Initials>\n
+        \               </Author>\n            </AuthorList>\n            <Language>eng</Language>\n
+        \           <PublicationTypeList>\n                <PublicationType UI=\"D002363\">Case
+        Reports</PublicationType>\n                <PublicationType UI=\"D016428\">Journal
+        Article</PublicationType>\n                <PublicationType UI=\"D016454\">Review</PublicationType>\n
+        \           </PublicationTypeList>\n        </Article>\n        <MedlineJournalInfo>\n
+        \           <Country>UNITED STATES</Country>\n            <MedlineTA>Am J
+        Orthop (Belle Mead NJ)</MedlineTA>\n            <NlmUniqueID>9502918</NlmUniqueID>\n
+        \           <ISSNLinking>1078-4519</ISSNLinking>\n        </MedlineJournalInfo>\n
+        \       <CitationSubset>IM</CitationSubset>\n        <MeshHeadingList>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D003131\">Combined
+        Modality Therapy</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D005260\">Female</DescriptorName>\n
+        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
+        MajorTopicYN=\"N\" UI=\"D005627\">Frostbite</DescriptorName>\n                <QualifierName
+        MajorTopicYN=\"Y\" UI=\"Q000175\">diagnosis</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"N\" UI=\"Q000188\">drug therapy</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"N\" UI=\"Q000503\">physiopathology</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"Y\" UI=\"Q000601\">surgery</QualifierName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D006801\">Humans</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D015601\">Injury Severity
+        Score</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D008297\">Male</DescriptorName>\n
+        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
+        MajorTopicYN=\"N\" UI=\"D008875\">Middle Aged</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"Y\"
+        UI=\"D019637\">Orthopedic Procedures</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D011379\">Prognosis</DescriptorName>\n            </MeshHeading>\n        </MeshHeadingList>\n
+        \       <NumberOfReferences>44</NumberOfReferences>\n    </MedlineCitation>\n
+        \   <PubmedData>\n        <History>\n            <PubMedPubDate PubStatus=\"pubmed\">\n
+        \               <Year>1999</Year>\n                <Month>2</Month>\n                <Day>27</Day>\n
+        \           </PubMedPubDate>\n            <PubMedPubDate PubStatus=\"medline\">\n
+        \               <Year>1999</Year>\n                <Month>2</Month>\n                <Day>27</Day>\n
+        \               <Hour>0</Hour>\n                <Minute>1</Minute>\n            </PubMedPubDate>\n
+        \           <PubMedPubDate PubStatus=\"entrez\">\n                <Year>1999</Year>\n
+        \               <Month>2</Month>\n                <Day>27</Day>\n                <Hour>0</Hour>\n
+        \               <Minute>0</Minute>\n            </PubMedPubDate>\n        </History>\n
+        \       <PublicationStatus>ppublish</PublicationStatus>\n        <ArticleIdList>\n
+        \           <ArticleId IdType=\"pubmed\">10048354</ArticleId>\n        </ArticleIdList>\n
+        \   </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:26:53 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:40 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -261,10 +191,8 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
       User-Agent:
       - Ruby
   response:
@@ -273,20 +201,20 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Thu, 10 Dec 2015 20:26:54 GMT
+      - Mon, 07 Mar 2016 22:19:40 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
-      - "*"
+      - ! '*'
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE715C669E00E1_0468SID
+      - 73BF5A0B6DDFE7C1_0057SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE715C669E00E1_0468SID; domain=.nih.gov; path=/; expires=Sat, 10
-        Dec 2016 20:26:54 GMT
+      - ncbi_sid=73BF5A0B6DDFE7C1_0057SID; domain=.nih.gov; path=/; expires=Tue, 07
+        Mar 2017 22:19:40 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -294,10 +222,10 @@ http_interactions:
       Transfer-Encoding:
       - chunked
     body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!DOCTYPE eEfetchResult
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!DOCTYPE eEfetchResult
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 20:26:54 GMT
+  recorded_at: Mon, 07 Mar 2016 22:19:40 GMT
 recorded_with: VCR 2.9.3
