--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/searches_ScienceWire_by_pmid_when_not_found_locally_and_returns_a_pubhash.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/searches_ScienceWire_by_pmid_when_not_found_locally_and_returns_a_pubhash.yml
@@ -4,24 +4,36 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>&lt;query
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"&gt;\n
-        \             &lt;Criterion ConjunctionOperator=\"AND\"&gt;\n                &lt;Criteria&gt;\n
-        \                 &lt;Criterion&gt;\n                    &lt;Filter&gt;\n
-        \                     &lt;Column&gt;PMID&lt;/Column&gt;\n                      &lt;Operator&gt;In&lt;/Operator&gt;\n
-        \                     &lt;Values&gt;&lt;Value&gt;10487815&lt;/Value&gt;&lt;/Values&gt;\n
-        \                           &lt;/Filter&gt;\n                          &lt;/Criterion&gt;\n
-        \                       &lt;/Criteria&gt;\n                      &lt;/Criterion&gt;\n
-        \                     &lt;Columns&gt;\n                        &lt;SortColumn&gt;\n
-        \                         &lt;Column&gt;Rank&lt;/Column&gt;\n                          &lt;Direction&gt;Descending&lt;/Direction&gt;\n
-        \                       &lt;/SortColumn&gt;\n                      &lt;/Columns&gt;\n
-        \                     &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;\n                    &lt;/query&gt;</xmlQuery>\n
-        \     </ScienceWireQueryXMLParameter>"
+      encoding: UTF-8
+      string: |-
+        <?xml version="1.0"?>
+              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+              <xmlQuery>&lt;query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+                      &lt;Criterion ConjunctionOperator="AND"&gt;
+                        &lt;Criteria&gt;
+                          &lt;Criterion&gt;
+                            &lt;Filter&gt;
+                              &lt;Column&gt;PMID&lt;/Column&gt;
+                              &lt;Operator&gt;In&lt;/Operator&gt;
+                              &lt;Values&gt;&lt;Value&gt;10487815&lt;/Value&gt;&lt;/Values&gt;
+                                    &lt;/Filter&gt;
+                                  &lt;/Criterion&gt;
+                                &lt;/Criteria&gt;
+                              &lt;/Criterion&gt;
+                              &lt;Columns&gt;
+                                &lt;SortColumn&gt;
+                                  &lt;Column&gt;Rank&lt;/Column&gt;
+                                  &lt;Direction&gt;Descending&lt;/Direction&gt;
+                                &lt;/SortColumn&gt;
+                              &lt;/Columns&gt;
+                              &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;
+                            &lt;/query&gt;</xmlQuery>
+              </ScienceWireQueryXMLParameter>
     headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
       Licenseid:
@@ -52,16 +64,16 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 07 Mar 2016 22:19:25 GMT
+      - Tue, 29 Mar 2016 01:16:27 GMT
       Content-Length:
       - '278'
     body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>142959</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 07 Mar 2016 22:19:25 GMT
+  recorded_at: Tue, 29 Mar 2016 01:16:27 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/142959?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -69,8 +81,10 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
       Content-Type:
@@ -99,12 +113,12 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 07 Mar 2016 22:19:25 GMT
+      - Tue, 29 Mar 2016 01:16:27 GMT
       Content-Length:
       - '4218'
     body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>10340243</PublicationItemID>\r\n    <Title>Convergence
         and correlations among leaf size and function in seed plants: A comparative
@@ -156,5 +170,5 @@ http_interactions:
         \   <CopyrightStateProvince>MO</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Mon, 07 Mar 2016 22:19:26 GMT
+  recorded_at: Tue, 29 Mar 2016 01:16:27 GMT
 recorded_with: VCR 2.9.3
