add config gem for settings management. Using "ConfigSettings" as the namespace
"Settings" is already being used by another configuration so using "ConfigSettings" for
the config gem.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ README_configs.txt
 ## Specific to SublimeText:
 *.sublime-project
 *.sublime-workspace
+
+## Config gem settings
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
